--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         <div id="team">
             <h2 id="team-title">Team Bofa Bros</h2>
             <p id="team-desc">
-                Returning for a second year after their honorable mention from Datahacks 2021, Team Wild Rifters, now renamed to Team Bofa Bros, composed of Jonathan Lo, Eric Wang, and Justin Liang, hope to build upon their previous experiences to showcase a development of knowledge in this year’s Datahacks 2022 Advanced Path. With a newfound appreciation for the ability of data to help change the understanding of the world around us, Team Bofa Bros hopes to use this hackathon as the backbone to create something much greater.<br><br>
-                We are vengeance.<br><br>
-                We're back to destroy the enemy nexus this time.
+                Returning for a second year after their honorable mention from Datahacks 2021, Team Wild Rifters, now renamed to Team Bofa Bros, composed of Jonathan Lo, Eric Wang, and Justin Liang, hope to build upon their previous experiences to showcase a development of knowledge in this year’s Datahacks 2022 Advanced Path. With a newfound appreciation for the ability of data to help change the understanding of the world around us, Team Bofa Bros hopes to use this hackathon as the backbone to create something much greater.
+
             </p>
             <div id="member-list">
                 <div class="member" style="--animation-order: 1;" onclick="location.href = 'https://www.linkedin.com/in/jonathanlo411/'">
